Changes in properties file

--- a/application.properties
+++ b/application.properties
@@ -3,4 +3,5 @@ spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.pool-name=SmsCallback
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+#Sync duration for reporting module
 mekongnet-sync-duration-in-days=3
